<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterTypeActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/expert" />

    <TextView
        android:id="@+id/textView3"
        style="@style/ExpertLogoType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/app_name"
        android:textColor="@color/blueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/regTypeTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/LookingFor"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Switch
        android:id="@+id/offerServiceSwitch"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autoText="false"
        android:fontFamily="@font/lato"
        android:text="@string/OfferServices"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regTypeTitleTV" />

    <Switch
        android:id="@+id/searchServiceSwitch"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/SearchingServices"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offerServiceSwitch" />

    <Button
        android:id="@+id/registerBtn"
        style="@style/ExpertOrangeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:fontFamily="@font/lato"
        android:lineSpacingExtra="8sp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchServiceSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>